Fix nav issue If the nav had been toggle-closed, and then the window expanded, the nav that should have previously been visible was hidden with no way to get it back. This fixes that issue.

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -67,7 +67,7 @@ nav ul.main-nav {
     width: auto;
     top: 0;
     float: right;
-    display: block;
+    display: block !important;
     li {
       float: left;
       a {
